implemented weather functionality

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,7 @@ Pillow  # PIL fork
 httpx  # Optional, depends on your preference for making HTTP requests
 playsound  # Optional, for audio playback
 ollama  # Assuming this is a custom module or a private library
-# logging
+openmeteo_requests
+requests_cache
+pandas
+retry_requests
